--- a/attendance_form.html
+++ b/attendance_form.html
@@ -133,80 +133,150 @@
 					</ul>
 				</div>
 			</div>
-			<div class="card">  
+			<div class="card">
 				<h2>Attendance Search</h2>
 				<div class="container">
 					<form action="/submit_form" method="post">
+
 						<div class="row">
 							<div class="column">
-								<label for="load_type">Load Type: <span class="name">Amit Das</span> </label>
-								
-							</div>
-							<div class="column">
-								<label for="year">Year:</label>
-								<input type="text" id="year" name="year" required>
-							</div>
-							<div class="column">
-								<label for="program">Program:</label>
-								<input type="text" id="program" name="program" required>
-							</div>
-						</div>
-						<div class="row">
-							<div class="column">
-								<label for="div">Division:</label>
+								<label for="div">Name:</label>
 								<input type="text" id="div" name="div" required>
 							</div>
 							<div class="column">
-								<label for="batch">Batch:</label>
-								<input type="text" id="batch" name="batch" required>
-							</div>
-							<div class="column">
-								<label for="course">Course:</label>
+								<label for="course">Roll No.:</label>
 								<input type="text" id="course" name="course" required>
 							</div>
+							<div class="column">
+								<label for="batch">Date:</label>
+								<input type="date" id="batch" name="batch" required>
+							</div>
+
 						</div>
-						<button type="submit" class="search-button">Search</button> 
-						<button type="submit" class="search-button">Download data</button> 
+						<button type="submit" class="search-button">Search</button>
+						<!-- <button type="submit" class="search-button">Download data</button>  -->
 					</form>
-					
+
 				</div>
 				<div class="card">
 					<table>
 						<tr>
-							<th>Load Type</th>
-							<th>Year</th>
-							<th>Program</th>
+							<th>Roll No.</th>
+							<th>Attendance</th>
+							<th>Name</th>
+							<th>Type</th>
 							<th>Attendance</th>
 							<th id="view">View</th>
 						</tr>
 						<tr>
-							<td>Full Time</td>
+							<td>1</td>
+							<td><input type="radio" name="absent" id="absent"> Absent
+								<input type="radio" name="absent" id="present"> Present
+							</td>
 							<td>Second Year</td>
-							<td>Computer Science</td>
+							<td>Regular</td>
 							<td>100%</td>
-							<td ><button class="view">View</button></td>
+							<td><button class="view">View</button></td>
+						</tr>
+
+						<tr>
+							<td>1</td>
+							<td>
+								<input type="radio" name="absent" id="absent"> <span>Absent</span>
+								<input type="radio" name="absent" id="present"> Present
+							</td>
+							<td>Second Year</td>
+							<td>Regular</td>
+							<td>100%</td>
+							<td><button class="view">View</button></td>
 						</tr>
 						<tr>
-							<td>Full Time</td>
+							<td>1</td>
+							<td><input type="radio" name="absent" id="absent"> Absent
+								<input type="radio" name="absent" id="present"> Present
+							</td>
 							<td>Second Year</td>
-							<td>Computer Science</td>
+							<td>Regular</td>
 							<td>100%</td>
-							<td ><button class="view">View</button></td>
+							<td><button class="view">View</button></td>
 						</tr>
 						<tr>
-							<td>Full Time</td>
+							<td>1</td>
+							<td><input type="radio" name="absent" id="absent"> Absent
+								<input type="radio" name="absent" id="present"> Present
+							</td>
 							<td>Second Year</td>
-							<td>Computer Science</td>
+							<td>Regular</td>
 							<td>100%</td>
-							<td ><button class="view">View</button></td>
+							<td><button class="view">View</button></td>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td><input type="radio" name="absent" id="absent"> Absent
+								<input type="radio" name="absent" id="present"> Present
+							</td>
+							<td>Second Year</td>
+							<td>Regular</td>
+							<td>100%</td>
+							<td><button class="view">View</button></td>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td><input type="radio" name="absent" id="absent"> Absent
+								<input type="radio" name="absent" id="present"> Present
+							</td>
+							<td>Second Year</td>
+							<td>Regular</td>
+							<td>100%</td>
+							<td><button class="view">View</button></td>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td><input type="radio" name="absent" id="absent"> Absent
+								<input type="radio" name="absent" id="present"> Present
+							</td>
+							<td>Second Year</td>
+							<td>Regular</td>
+							<td>100%</td>
+							<td><button class="view">View</button></td>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td><input type="radio" name="absent" id="absent"> Absent
+								<input type="radio" name="absent" id="present"> Present
+							</td>
+							<td>Second Year</td>
+							<td>Regular</td>
+							<td>100%</td>
+							<td><button class="view">View</button></td>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td><input type="radio" name="absent" id="absent"> Absent
+								<input type="radio" name="absent" id="present"> Present
+							</td>
+							<td>Second Year</td>
+							<td>Regular</td>
+							<td>100%</td>
+							<td><button class="view">View</button></td>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td><input type="radio" name="absent" id="absent"> Absent
+								<input type="radio" name="absent" id="present"> Present
+							</td>
+							<td>Second Year</td>
+							<td>Regular</td>
+							<td>100%</td>
+							<td><button class="view">View</button></td>
 						</tr>
 						<!-- Add more rows as needed -->
 					</table>
 				</div>
 			</div>
-			</section>
-			
-		</main>	
+	</section>
+
+	</main>
 
 	</section>
 	<!-- CONTENT -->
