--- a/academics.html
+++ b/academics.html
@@ -4,7 +4,6 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <link rel="stylesheet" href="cir.css"> -->
 	<!-- Boxicons -->
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -143,27 +142,27 @@
 					</ul>
 					<div class="course">
 						<div class="box">
-							<h3>HTML</h3>
+							<h3>Java</h3>
 							<p>Second Year (3<sup style="text-transform: lowercase;">rd</sup> Semester)</p>
 							<p>8 lectures conducted</p>
 
 							<a href="attendance_form.html"> <button> See Attendance </button></a>
-							<i class="fab fa-html5 html"></i>
+							<img src="assets/img/java.png" alt="">
 						</div>
 						<div class="box">
-							<h3>CSS</h3>
+							<h3>C++</h3>
 							<p>Second Year (4<sup style="text-transform: lowercase;">th</sup> Semester)</p>
 							<p>5 lectures conducted</p>
 
 							<a href="attendance_form.html"> <button> See Attendance </button></a>
-							<i class="fab fa-css3-alt css"></i>
+							<img src="assets/img/c++.png" alt="">
 						</div>
 						<div class="box">
 							<h3>Practical Labs</h3>
 							<p>3 labs conducted</p>
 							<p>3 labs conducted</p>
 							<a href="attendance_form.html"> <button> See Attendance </button></a>
-							<i class="fab fa-js-square js"></i>
+							<img src="assets/img/dsa.png" alt="">
 						</div>
 					</div>
 				</div>
@@ -228,19 +227,13 @@ a{
 .box button:hover{
   background: rgba(0, 0, 0, 0.842);
 }
-.box i{
+.box img{
   font-size: 7rem;
   float: right;
   margin: -20px 20px 20px 0;
 }
-.html{
-  color: rgb(25, 94, 54);
-}
-.css{
-  color: rgb(104, 179, 35);
-}
-.js{
-  color: rgb(28, 98, 179);
+img{
+	width: 120px;
 }
 			</style>
 	</section>
