--- a/attendance_form.html
+++ b/attendance_form.html
@@ -4,7 +4,6 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="cir.css">
 	<!-- Boxicons -->
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -166,7 +165,7 @@
 							<th>Name</th>
 							<th>Type</th>
 							<th>Attendance</th>
-							<th id="view">View</th>
+							<th id="view">  View</th>
 						</tr>
 						<tr>
 							<td>1</td>
@@ -176,7 +175,7 @@
 							<td>Second Year</td>
 							<td>Regular</td>
 							<td>100%</td>
-							<td><button class="view">View</button></td>
+							<td > <a href="" class="view">View</a> </td>
 						</tr>
 
 						<tr>
@@ -188,7 +187,7 @@
 							<td>Second Year</td>
 							<td>Regular</td>
 							<td>100%</td>
-							<td><button class="view">View</button></td>
+							<td > <a href="" class="view">View</a> </td>
 						</tr>
 						<tr>
 							<td>1</td>
@@ -198,7 +197,7 @@
 							<td>Second Year</td>
 							<td>Regular</td>
 							<td>100%</td>
-							<td><button class="view">View</button></td>
+							<td > <a href="" class="view">View</a> </td>
 						</tr>
 						<tr>
 							<td>1</td>
@@ -208,7 +207,7 @@
 							<td>Second Year</td>
 							<td>Regular</td>
 							<td>100%</td>
-							<td><button class="view">View</button></td>
+							<td > <a href="" class="view">View</a> </td>
 						</tr>
 						<tr>
 							<td>1</td>
@@ -218,7 +217,7 @@
 							<td>Second Year</td>
 							<td>Regular</td>
 							<td>100%</td>
-							<td><button class="view">View</button></td>
+							<td > <a href="" class="view">View</a> </td>
 						</tr>
 						<tr>
 							<td>1</td>
@@ -228,7 +227,7 @@
 							<td>Second Year</td>
 							<td>Regular</td>
 							<td>100%</td>
-							<td><button class="view">View</button></td>
+							<td > <a href="" class="view">View</a> </td>
 						</tr>
 						<tr>
 							<td>1</td>
@@ -238,7 +237,7 @@
 							<td>Second Year</td>
 							<td>Regular</td>
 							<td>100%</td>
-							<td><button class="view">View</button></td>
+							<td > <a href="" class="view">View</a> </td>
 						</tr>
 						<tr>
 							<td>1</td>
@@ -248,7 +247,7 @@
 							<td>Second Year</td>
 							<td>Regular</td>
 							<td>100%</td>
-							<td><button class="view">View</button></td>
+							<td > <a href="" class="view">View</a> </td>
 						</tr>
 						<tr>
 							<td>1</td>
@@ -258,7 +257,7 @@
 							<td>Second Year</td>
 							<td>Regular</td>
 							<td>100%</td>
-							<td><button class="view">View</button></td>
+							<td > <a href="" class="view">View</a> </td>
 						</tr>
 						<tr>
 							<td>1</td>
@@ -268,12 +267,15 @@
 							<td>Second Year</td>
 							<td>Regular</td>
 							<td>100%</td>
-							<td><button class="view">View</button></td>
+							<td > <a href="" class="view">View</a> </td>
 						</tr>
 						<!-- Add more rows as needed -->
 					</table>
+					
 				</div>
+				<button type="submit" class="attendance-button">Submit</button>
 			</div>
+			
 	</section>
 
 	</main>
