--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 	<!-- My CSS -->
-	<link rel="stylesheet" href="/assets/style/style.css">
-	<link rel="stylesheet" href="/assets/style/mac.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="assets/style/style.css">
+	<link rel="stylesheet" href="assets/style/mac.css">
+	<!-- <link rel="stylesheet" href="assets/style/progressbar.css"> -->
 	<title>TAE</title>
 </head>
 
@@ -239,22 +239,32 @@
 							<p class="date">10 <sup>th</sup>April 2024 </p>
 						</div>
 						<div class="info">
-							<div class="user"> <i class='fas fa-volume-up'></i> Seminar in seminar hall </div>
+							<div class="user"><i class='fas fa-bell'></i> Seminar in seminar hall </div>
 
 							<p class="date">10 <sup>th</sup>April 2024 </p>
 						</div>
 						<div class="info">
-							<div class="user"> <i class='fas fa-volume-up'></i> Internship review </div>
+							<div class="user"><i class='fas fa-bell'></i> Internship review </div>
 
 							<p class="date">10 <sup>th</sup>April 2024 </p>
 						</div>
 						<div class="info">
-							<div class="user"> <i class='fas fa-volume-up'></i> New joining</div>
+							<div class="user"><i class='fas fa-bell'></i> New joining</div>
 
 							<p class="date">10 <sup>th</sup>April 2024 </p>
 						</div>
 						<div class="info">
-							<div class="user"> <i class='fas fa-volume-up'></i> Unit test dates</div>
+							<div class="user"><i class='fas fa-bell'></i> Unit test dates</div>
+
+							<p class="date">10 <sup>th</sup>April 2024 </p>
+						</div>
+						<div class="info">
+							<div class="user"><i class='fas fa-bell'></i> Unit test dates</div>
+
+							<p class="date">10 <sup>th</sup>April 2024 </p>
+						</div>
+						<div class="info">
+							<div class="user"><i class='fas fa-bell'></i> Unit test dates</div>
 
 							<p class="date">10 <sup>th</sup>April 2024 </p>
 						</div>
