--- a/notices.html
+++ b/notices.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 	<!-- My CSS -->
 	<link rel="stylesheet" href="assets/style/style.css">
-	<link rel="stylesheet" href="notice.css">
+	<link rel="stylesheet" href="assets/style/notice.css">
 	<title>TAE</title>
 </head>
 
@@ -108,7 +108,7 @@
 			</a>
 
 			<a href="#" class="profile">
-				<img src="img/user.png">
+				<img src="assets/img/user.png">
 			</a>
 		</nav>
 		<!-- NAVBAR -->
@@ -126,6 +126,10 @@
 						<li>
 							<a class="active" href="#">published</a>
 						</li>
+						<li><i class='bx bx-chevron-right'></i></li>
+						<li>
+							<a class="active" href="noticesform.html">Add a notice</a>
+						</li>
 						
 					</ul>
 				</div>
@@ -137,6 +141,7 @@
 					  <tr>
 						<th>Sr. no.</th>
 						<th>Professor</th>
+						<th>Department</th>
 						<th>Date and Time</th>
 						<th>Notice</th>
 					  </tr>
@@ -144,33 +149,38 @@
 					<tbody>
 					  <tr>
 						<td>1</td>
-						<td>xyz</td>
+						<td>R. B. Lagdive</td>
+						<td>Comp</td>
 						<td><p id="datetime"></p></td>
-						<td>  lorem30 </td>
+						<td>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores error quod eligendi deleniti provident, aliquid quidem consequatur, hic illum eaque recusandae. Necessitatibus, similique. Ad unde voluptate vero. Nulla, repudiandae maiores. </td>
 					  </tr>
 					  <tr>
-						<td>1</td>
-						<td>xyz</td>
-						<td><p id="datetime"></p></td>
-						<td>  lorem30 </td>
-					  </tr>
-					  <tr>
-						<td>1</td>
-						<td>xyz</td>
-						<td><p id="datetime"></p></td>
-						<td>  lorem30 </td>
-					  </tr>
-					  <tr class="active-row">
 						<td>2</td>
-						<td>abc</td>
+						<td>Nilufer Zaman</td>
+						<td>Comp</td>
 						<td><p id="datetime"></p></td>
-						<td>Students</td>
+						<td>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, eaque accusantium. Nisi eaque blanditiis corrupti eum maiores facere reprehenderit dignissimos. </td>
 					  </tr>
 					  <tr>
 						<td>3</td>
-						<td>ccd</td>
+						<td>Susha Adagale</td>
+						<td>Comp</td>
 						<td><p id="datetime"></p></td>
-						<td>dcode</td>
+						<td>  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, quia! </td>
+					  </tr>
+					  <tr class="active-row">
+						<td>4</td>
+						<td>Sikha Sharma</td>
+						<td>Comp</td>
+						<td><p id="datetime"></p></td>
+						<td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum placeat, hic nesciunt amet unde autem!</td>
+					  </tr>
+					  <tr>
+						<td>5</td>
+						<td>Abhijeet Cholke</td>
+						<td>Comp</td>
+						<td><p id="datetime"></p></td>
+						<td>Lorem ipsum dolor sit amet.</td>
 					  </tr>
 					</tbody>
 				  </table>
