--- a/notices.html
+++ b/notices.html
@@ -144,6 +144,7 @@
 						<th>Department</th>
 						<th>Date and Time</th>
 						<th>Notice</th>
+						<th>Read</th>
 					  </tr>
 					</thead>
 					<tbody>
@@ -153,6 +154,7 @@
 						<td>Comp</td>
 						<td><p id="datetime"></p></td>
 						<td>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores error quod eligendi deleniti provident, aliquid quidem consequatur, hic illum eaque recusandae. Necessitatibus, similique. Ad unde voluptate vero. Nulla, repudiandae maiores. </td>
+						<td>Read</td>
 					  </tr>
 					  <tr>
 						<td>2</td>
@@ -160,6 +162,7 @@
 						<td>Comp</td>
 						<td><p id="datetime"></p></td>
 						<td>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, eaque accusantium. Nisi eaque blanditiis corrupti eum maiores facere reprehenderit dignissimos. </td>
+						<td>Read</td>
 					  </tr>
 					  <tr>
 						<td>3</td>
@@ -167,6 +170,7 @@
 						<td>Comp</td>
 						<td><p id="datetime"></p></td>
 						<td>  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, quia! </td>
+						<td>Read</td>
 					  </tr>
 					  <tr class="active-row">
 						<td>4</td>
@@ -174,6 +178,7 @@
 						<td>Comp</td>
 						<td><p id="datetime"></p></td>
 						<td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum placeat, hic nesciunt amet unde autem!</td>
+						<td>Read</td>
 					  </tr>
 					  <tr>
 						<td>5</td>
@@ -181,6 +186,7 @@
 						<td>Comp</td>
 						<td><p id="datetime"></p></td>
 						<td>Lorem ipsum dolor sit amet.</td>
+						<td>Read</td>
 					  </tr>
 					</tbody>
 				  </table>
