--- a/academics.html
+++ b/academics.html
@@ -133,7 +133,7 @@
 				</div>
 			</div>
 			<section class="main-course">
-				<h1>My Subjects</h1>
+				<h1>Subjects</h1>
 				<div class="course-box">
 					<ul>
 						<li class="active"> <a href="academics.html">Second Year</a> </li>
@@ -158,6 +158,30 @@
 							<img src="assets/img/c++.png" alt="">
 						</div>
 						<div class="box">
+							<h3>C++</h3>
+							<p>Second Year (4<sup style="text-transform: lowercase;">th</sup> Semester)</p>
+							<p>5 lectures conducted</p>
+
+							<a href="attendance_form.html"> <button> See Attendance </button></a>
+							<img src="assets/img/c++.png" alt="">
+						</div>
+						<div class="box">
+							<h3>C++</h3>
+							<p>Second Year (4<sup style="text-transform: lowercase;">th</sup> Semester)</p>
+							<p>5 lectures conducted</p>
+
+							<a href="attendance_form.html"> <button> See Attendance </button></a>
+							<img src="assets/img/c++.png" alt="">
+						</div>
+						
+						<div class="box">
+							<h3>Practical Labs</h3>
+							<p>3 labs conducted</p>
+							<p>3 labs conducted</p>
+							<a href="attendance_form.html"> <button> See Attendance </button></a>
+							<img src="assets/img/dsa.png" alt="">
+						</div>
+						<div class="box">
 							<h3>Practical Labs</h3>
 							<p>3 labs conducted</p>
 							<p>3 labs conducted</p>
@@ -176,13 +200,12 @@
   text-transform: capitalize;
 }
 .course-box{
-  width: 100%;
-  height: 300px;
   padding: 10px 10px 30px 10px;
   margin-top: 10px;
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
+ 
 }
 a{
 	color: black;
@@ -190,6 +213,7 @@ a{
 .course-box ul{
   list-style: none;
   display: flex;
+  
 }
 .course-box ul li{
   margin: 10px;
@@ -201,12 +225,13 @@ a{
   border-bottom: 1px solid #000;
 }
 .course-box .course{
-  display: flex;
+	display: grid;
+   grid-template-columns: repeat(3,1fr);
 }
 .box{
-  width: 33%;
+  /* width: 33%; */
   padding: 10px;
-  margin: 10px;
+  margin: 15px;
   border-radius: 10px;
   background: rgb(235, 233, 233);
   box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
