new changes made

--- a/attendance_form.html
+++ b/attendance_form.html
@@ -19,7 +19,7 @@
 	<!-- SIDEBAR -->
 	<section id="sidebar">
 		<a href="#" class="brand">
-			<span class="text">TAE</span>
+			<span class="text"><img src="/assets/img/tae-logo.png" height="100px" alt=""></span>
 		</a>
 		<ul class="side-menu top">
 			<li class="active">
