new changes made

--- a/pacademics.html
+++ b/pacademics.html
@@ -35,7 +35,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="pacademics.html">
+				<a href="staffs.html">
 					<i class='bx bxs-calendar-star'></i>
 					<span class="text">Staff Members</span>
 				</a>
