new changes made

--- a/index.html
+++ b/index.html
@@ -91,9 +91,6 @@
 	<section id="content">
 		<!-- NAVBAR -->
 		<nav>
-			<i class='bx bx-menu'></i>
-
-
 			<div class="intro">
 				<h2>Trinity Academy of Engineering</h2>
 			</div>
@@ -145,10 +142,10 @@
 
 						</div>
 						<div style="font-size: 12px; font-weight: 600;"><label for="cars">View:</label>
-							<select name="class" style="border: none;">
-								<option value="second_year">Second Year</option>
-								<option value="third_year">Third Year</option>
-								<option value="final_year">Final Year</option>
+							<select name="class" style="border: .5px solid black; border-radius: 5px;">
+								<option value="second_year">Subject</option>
+								<option value="third_year">Subject</option>
+								<option value="final_year">Subject</option>
 								<option value="audi">None</option>
 							</select>
 						</div>
@@ -199,27 +196,27 @@
 					</p>
 					<div class="details">
 						<div class="info">
-							<div class="user"><img src="/assets/img/user.png" alt=""> Bhupendra Jogi</div>
+							<div class="user"><img src="/assets/img/user.png" alt=""> Sikha Sharma</div>
 
 							<div class="date">10 <sup>th</sup>April 2024 </div>
 						</div>
 						<div class="info">
-							<div class="user"><img src="/assets/img/user.png" alt=""> Bhupendra Jogi</div>
+							<div class="user"><img src="/assets/img/user.png" alt=""> Nilufer Zaman</div>
 
 							<p class="date">10 <sup>th</sup>April 2024 </p>
 						</div>
 						<div class="info">
-							<div class="user"><img src="/assets/img/user.png" alt=""> Bhupendra Jogi</div>
+							<div class="user"><img src="/assets/img/user.png" alt=""> Rambhau lagdive</div>
 
 							<p class="date">10 <sup>th</sup>April 2024 </p>
 						</div>
 						<div class="info">
-							<div class="user"><img src="/assets/img/user.png" alt=""> Bhupendra Jogi</div>
+							<div class="user"><img src="/assets/img/user.png" alt=""> Abhijeet Cholke</div>
 
 							<p class="date">10 <sup>th</sup>April 2024 </p>
 						</div>
 						<div class="info">
-							<div class="user"><img src="/assets/img/user.png" alt=""> Bhupendra Jogi</div>
+							<div class="user"><img src="/assets/img/user.png" alt=""> Bharat Devhare</div>
 
 							<p class="date">10 <sup>th</sup>April 2024 </p>
 						</div>
@@ -351,110 +348,39 @@
 					<p class="title">NewsLetter
 						<hr>
 					</p>
-					<div class="macbook">
-						<div class="inner1">
-						  <div class="screen">
-							<div class="face-one">
-							  <div class="camera"></div>
-							  <div class="display">
-								<div class="shade"></div>
-							  </div>
-							  <span>MacBook Air</span>
-							</div>
-						<title>Layer 1</title>
-						</div>
-						  <div class="macbody">
-							<div class="face-one">
-							  <div class="touchpad">
-							  </div>
-							  <div class="keyboard">
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key space"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key"></div>
-								<div class="key f"></div>
-								<div class="key f"></div>
-								<div class="key f"></div>
-								<div class="key f"></div>
-								<div class="key f"></div>
-								<div class="key f"></div>
-								<div class="key f"></div>
-								<div class="key f"></div>
-								<div class="key f"></div>
-								<div class="key f"></div>
-								<div class="key f"></div>
-								<div class="key f"></div>
-								<div class="key f"></div>
-								<div class="key f"></div>
-								<div class="key f"></div>
-								<div class="key f"></div>
-							  </div>
-							</div>
-							<div class="pad one"></div>
-							<div class="pad two"></div>
-							<div class="pad three"></div>
-							<div class="pad four"></div>
-						  </div>
-						</div>
-						<div class="shadow"></div>
-					  </div>
+					<div class="details">
+						<div class="info">
+							<div class="user"> August <span>(2023-2024)</span></div>
 
+							<div class="date">10 <sup>th</sup>April 2024 </div>
+						</div>
+						<div class="info">
+							<div class="user"> Holi</div>
 
+							<p class="date">10 <sup>th</sup>April 2024 </p>
+						</div>
+						<div class="info">
+							<div class="user">Rakshabandhan</div>
+
+							<p class="date">10 <sup>th</sup>April 2024 </p>
+						</div>
+						<div class="info">
+							<div class="user">Diwali</div>
+
+							<p class="date">10 <sup>th</sup>April 2024 </p>
+						</div>
+						<div class="info">
+							<div class="user">Christmas</div>
+
+							<p class="date">10 <sup>th</sup>April 2024 </p>
+						</div>
+						<div class="info">
+							<div class="user">New Year</div>
+
+							<p class="date">10 <sup>th</sup>April 2024 </p>
+						</div>
+
+					</div>
 				</li>
 
 			</ul>
