new changes made

--- a/pindex.html
+++ b/pindex.html
@@ -138,7 +138,7 @@
 			<ul class="box-info">
 
 				<li>
-					<p class="title">Attendance and progress bar
+					<p class="title">Attendance
 
 						<hr>
 					</p>
