--- a/attendance_form.html
+++ b/attendance_form.html
@@ -103,8 +103,8 @@
 				<span class="num">8</span>
 			</a>
 
-			<a href="#" class="profile">
-				<img src="img/user.png">
+			<a href="#" class="profile" >
+				<p>Prof. Nilufer Zaman</p>	<img src="/assets/img/nilufermam.jpg">
 			</a>
 		</nav>
 		<!-- NAVBAR -->
