--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			</a>
 
 			<a href="#" class="profile" >
-				<p>Welcome:Userxyz</p>	<img src="/assets/img/user.png">
+				<p>Prof. Nilufer Zaman</p>	<img src="/assets/img/nilufermam.jpg">
 			</a>
 		</nav>
 		<!-- NAVBAR -->
@@ -132,7 +132,7 @@
 			<ul class="box-info">
 
 				<li>
-					<p class="title">Attendance and progress bar
+					<p class="title">Attendance
 
 						<hr>
 					</p>
