--- a/noticesform.html
+++ b/noticesform.html
@@ -104,8 +104,8 @@
 				<span class="num">8</span>
 			</a>
 
-			<a href="#" class="profile">
-				<img src="assets/img/user.png">
+			<a href="#" class="profile" >
+				<p>Prof. Nilufer Zaman</p>	<img src="/assets/img/nilufermam.jpg">
 			</a>
 		</nav>
 		<!-- NAVBAR -->
