--- a/green.html
+++ b/green.html
@@ -62,26 +62,26 @@
 				</a>
 			</li>
 			<li>
-				<a href="timetable.html">
+				<a href="">
 					<i class='bx bxs-message-dots'></i>
 					<span class="text">Time Table</span>
 				</a>
 			</li>
 			<li>
-				<a href="leaves.html">
+				<a href="">
 					<i class='bx bxs-group'></i>
 					<span class="text">Leaves</span>
 				</a>
 			</li>
 
 			<li>
-				<a href="students.html">
+				<a href="">
 					<i class='bx bxs-group'></i>
 					<span class="text">Student Info</span>
 				</a>
 			</li>
 			<li>
-				<a href="feedback.html">
+				<a href="">
 					<i class='bx bxs-group'></i>
 					<span class="text">Feedback</span>
 				</a>
