--- a/notices.html
+++ b/notices.html
@@ -149,8 +149,9 @@
 						<td>1</td>
 						<td>R. B. Lagdive</td>
 						<td>Comp</td>
-						<td><p id="datetime"></p></td>
-						<td>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores error quod eligendi deleniti provident, aliquid quidem consequatur, hic illum eaque recusandae. Necessitatibus, similique. Ad unde voluptate vero. Nulla, repudiandae maiores. </td>
+						<td> published on:12/04/2024 <br>
+						valid upto : 12/04/24</td>
+						<td>  Lorem ipsum dolor sit amet consectetur adipisicing elit. </td>
 						<td>Read</td>
 					  </tr>
 					  <tr>
@@ -158,7 +159,7 @@
 						<td>Nilufer Zaman</td>
 						<td>Comp</td>
 						<td><p id="datetime"></p></td>
-						<td>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, eaque accusantium. Nisi eaque blanditiis corrupti eum maiores facere reprehenderit dignissimos. </td>
+						<td>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo,  </td>
 						<td>Read</td>
 					  </tr>
 					  <tr>
@@ -174,7 +175,7 @@
 						<td>Sikha Sharma</td>
 						<td>Comp</td>
 						<td><p id="datetime"></p></td>
-						<td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum placeat, hic nesciunt amet unde autem!</td>
+						<td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum placeat,</td>
 						<td>Read</td>
 					  </tr>
 					  <tr>
