new changes made

--- a/attendance_form.html
+++ b/attendance_form.html
@@ -126,6 +126,10 @@
 						<li>
 							<a class="active" href="green.html">GreenBook</a>
 						</li>
+						<li><i class='bx bx-chevron-right'></i></li>
+						<li>
+							<a class="active" href="history.html">History</a>
+						</li>
 					</ul>
 				</div>
 			</div>
