--- a/green.html
+++ b/green.html
@@ -147,6 +147,10 @@
 						<li>
 							<a class="active" href="#">GreenBook</a>
 						</li>
+						<li><i class='bx bx-chevron-right'></i></li>
+						<li>
+							<a class="active" href="history.html">History</a>
+						</li>
 					</ul>
 				</div>
 			</div>
