new changes made

--- a/student_form.html
+++ b/student_form.html
@@ -136,15 +136,7 @@
 							<span class="title">Personal Details</span>
 
 							<div class="fields">
-								<div class="input-field">
-									<label>Student ID</label>
-									<input type="number" placeholder="Enter Student ID" min="0" required>
-								</div>
-
-								<div class="input-field">
-									<label>PRN</label>
-									<input type="text" placeholder="Enter PRN ">
-								</div>
+								
 
 								<div class="input-field">
 									<label>First Name</label>
@@ -221,9 +213,9 @@
 									</select>
 								</div>
 								<div class="input-field">
-									<label>Course</label>
+									<label>Department</label>
 									<select required>
-										<option disabled selected>Select Course</option>
+										<option disabled selected>Select Department</option>
 										<option>Mechanical Eng.</option>
 										<option>Computer eng.</option>
 										<option>IT Eng.</option>
