new changes made

--- a/notices.html
+++ b/notices.html
@@ -246,9 +246,10 @@
 							<input type="datetime-local">
 						</div>
 						<div>
-							<input type="file" id="file" name="file" accept=".pdf">
+							<label for="file" class="custom-file-upload">Choose an image to upload</label>
+							<input type="file" id="file" name="file" accept=".img, .jpg, .jpeg, .png">
 						</div>
-						
+					
 						<button type="submit">Publish</button>
 					</form>
 				</div>
