--- a/academics.html
+++ b/academics.html
@@ -53,7 +53,7 @@
 			</li>
 
 			<li>
-				<a href="">
+				<a href="students.html">
 					<i class='bx bxs-group'></i>
 					<span class="text">Student Info</span>
 				</a>
@@ -67,7 +67,7 @@
 		</ul>
 		<ul class="side-menu">
 			<li>
-				<a href="#">
+				<a href="">
 					<i class='bx bxs-cog'></i>
 					<span class="text">Settings</span>
 				</a>
