--- a/attendance_form.html
+++ b/attendance_form.html
@@ -54,7 +54,7 @@
 			</li>
 
 			<li>
-				<a href="">
+				<a href="students.html">
 					<i class='bx bxs-group'></i>
 					<span class="text">Student Info</span>
 				</a>
